# covapsy

./: .gitignore  README.md  plan.md  rules.md
Covapsy-prof/Software/CoVAPSy_DemoSimple_STM32/: CoVAPSy_DemoSimple_STM32.ioc
Covapsy-prof/Software/CoVAPSy_DemoSimple_STM32/Debug/: CoVAPSy_DemoSimple_STM32.elf  CoVAPSy_DemoSimple_STM32.list  CoVAPSy_DemoSimple_STM32.map
common/: config.py  gap_follower.py
my-simulation/Simulation_CoVAPSy_Webots/protos/: TT02_2025a.proto
my-simulation/Simulation_CoVAPSy_Webots/worlds/: .Piste_CoVAPSy_2025a.wbproj  Piste_CoVAPSy_2025a.wbt
mycar/: .gitignore  README.md  rules.md
mycar/docs/: ARCHITECTURE.md  CALIBRATION.md  HAT_JUMPERS.md  OPERATIONS.md  PI5_SETUP.md  SIMULATION.md  STM32_FIRMWARE.md  TROUBLESHOOTING.md  VALIDATION.md
mycar/ros2_ws/: conftest.py
mycar/ros2_ws/src/covapsy_bridge/: package.xml  setup.cfg  (+1 more)
mycar/ros2_ws/src/covapsy_bringup/: CMakeLists.txt  package.xml
mycar/ros2_ws/src/covapsy_bringup/config/: backend_params.yaml  car_params.yaml  cyclonedds.xml  slam_toolbox_params.yaml
mycar/ros2_ws/src/covapsy_bringup/launch/: car_full.launch.py  car_safe.launch.py  lidar.launch.py  nav.launch.py  realsense.launch.py  sim_webots.launch.py  sim_webots_multicar.launch.py  slam.launch.py
mycar/ros2_ws/src/covapsy_bringup/urdf/: covapsy_car.urdf.xacro
mycar/ros2_ws/src/covapsy_perception/: package.xml  setup.cfg  setup.py
mycar/ros2_ws/src/covapsy_perception/covapsy_perception/: border_detect_node.py  border_detect_utils.py  depth_obstacle_node.py  imu_reader.py  opponent_detect_node.py  opponent_detect_utils.py  scan_filter_node.py  scan_filter_utils.py
mycar/ros2_ws/src/covapsy_perception/test/: test_border_detect_utils.py  test_opponent_detect_utils.py  test_scan_filter_utils.py
mycar/scripts/: build_racing_path_from_csv.py  deploy_to_pi.sh  install_ros2.sh  install_simulation.sh  run_webots_standalone.ps1  setup_pi.sh
mycar/stm32_fw/hat_v1/: README.md
pi/: README.md  camera.py  covapsy_ctl.py  lidar.py  race.py  requirements.txt  stm32_link.py
ros2_ws/: README.md  RUNBOOK.md
ros2_ws/src/covapsy_bridge/: package.xml  setup.py
ros2_ws/src/covapsy_bridge/covapsy_bridge/: __init__.py  dynamixel_steering_node.py  lcd_status_formatter.py  serial_probe.py  steering_policy.py  stm32_bridge_node.py  usb_protocol.py
ros2_ws/src/covapsy_bridge/resource/: covapsy_bridge
ros2_ws/src/covapsy_bridge/test/: test_lcd_status_formatter.py  test_serial_probe.py  test_steering_policy.py  test_usb_protocol.py
ros2_ws/src/covapsy_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/covapsy_bringup/config/: learn_real.yaml  learn_sim.yaml  race_real.yaml  race_sim.yaml
ros2_ws/src/covapsy_bringup/covapsy_bringup/: __init__.py
ros2_ws/src/covapsy_bringup/launch/: car_learning.launch.py  car_race.launch.py  car_safe.launch.py  sim_learning.launch.py  sim_race.launch.py  sim_reactive.launch.py  sim_webots.launch.py
ros2_ws/src/covapsy_bringup/resource/: covapsy_bringup
ros2_ws/src/covapsy_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/covapsy_control/covapsy_control/: __init__.py  mode_controller_node.py  pure_pursuit_node.py  recovery_fsm.py
ros2_ws/src/covapsy_control/resource/: covapsy_control
ros2_ws/src/covapsy_direction/: package.xml  setup.cfg  setup.py
ros2_ws/src/covapsy_direction/covapsy_direction/: __init__.py  direction_detector_node.py
ros2_ws/src/covapsy_direction/resource/: covapsy_direction
ros2_ws/src/covapsy_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/covapsy_interfaces/msg/: DirectionState.msg  DriveCommand.msg  RaceTelemetry.msg  RecoveryState.msg  TrackQuality.msg
ros2_ws/src/covapsy_learning/: package.xml  setup.cfg  setup.py
ros2_ws/src/covapsy_learning/covapsy_learning/: __init__.py  track_learner_node.py
ros2_ws/src/covapsy_learning/resource/: covapsy_learning
ros2_ws/src/covapsy_learning/test/: test_track_saving.py  test_track_saving_logic.py
ros2_ws/src/covapsy_lidar/: package.xml  setup.cfg  setup.py
ros2_ws/src/covapsy_lidar/covapsy_lidar/: __init__.py  reactive_driver_node.py  scan_filter_node.py
ros2_ws/src/covapsy_lidar/resource/: covapsy_lidar
ros2_ws/src/covapsy_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/covapsy_tools/covapsy_tools/: __init__.py  drive_cmd_to_twist_adapter.py  param_sanity_checker.py  telemetry_logger_node.py
ros2_ws/src/covapsy_tools/resource/: covapsy_tools
scripts/: install_ros2.sh  install_simulation.sh  run_sim_webots.sh  run_webots_standalone.ps1  scan_xl430.py  setup_pi.sh
simulation/: .gitignore  README.md
simulation/controllers/covapsy_sim/: covapsy_sim.py
simulation/webots/protos/: TT02_2025a.proto
simulation/webots/worlds/: .Piste_CoVAPSy_2025a.wbproj  .Piste_CoVAPSy_2025a_multicar_ros2.wbproj  .Piste_CoVAPSy_2025a_ros2.wbproj  .Piste_CoVAPSy_2025a_standalone.wbproj  Piste_CoVAPSy_2025a_multicar_standalone.wbt
simulation/worlds/: multicar.wbt  standalone.wbt
stm32/: Makefile  README.md
stm32/Core/Inc/: adc.h  bno055.h  buzzer.h  cmd_parser.h  dynamixel.h  encoder.h  i2c.h  moteurs.h  sh1106.h  usart.h
stm32/Core/Src/: adc.c  bno055.c  buzzer.c  cmd_parser.c  dynamixel.c  encoder.c  i2c.c  main.c  moteurs.c  sh1106.c  stm32g4xx_it.c  usart.c
stm32_fw/hat_v1/docs/: flashing_swd_dfu.md  protocol_contract.md  versioning.md  windows_cubeide_setup.md
stm32_fw/hat_v1/src/: README.md  board_if.h  fw_config.h  fw_protocol.h  main.c
stm32_fw/usb_v1/: README.md
stm32_fw/usb_v1/cubeide_project/: README.md
stm32_fw/usb_v1/docs/: bench_validation.md  flashing_swd_dfu.md  pi_integration.md  pinmap.md  protocol_contract.md  versioning.md  windows_cubeide_setup.md
stm32_fw/usb_v1/releases/: README.md
stm32_fw/usb_v1/src/: README.md  board_if.h  board_port_template.c  control_mapping.h  fw_app.c  fw_app.h  fw_config.h  fw_oled.h  fw_protocol.c  fw_protocol.h  main.c
stm32_fw/usb_v1/tests/: test_fw_protocol_lcd.c
tests/: steering_calibration.py  test_camera.py  test_drive.py  test_gap_follower.py  test_lidar.py  test_motor.py  test_steering.py
track/: track_sim.json
(+136 files in other folders)
