<?xml version="1.0"?>
<package format="3">
  <name>covapsy_direction</name>
  <version>0.1.0</version>
  <description>Direction detection from RGB with LiDAR gating.</description>
  <maintainer email="team@example.com">covapsy</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>covapsy_interfaces</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
