<?xml version="1.0"?>
<package format="3">
  <name>covapsy_lidar</name>
  <version>0.1.0</version>
  <description>LiDAR processing and reactive driving nodes.</description>
  <maintainer email="team@example.com">covapsy</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>covapsy_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
