<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>covapsy_bringup</name>
  <version>1.0.0</version>
  <description>Bringup package for COVAPSY: launch files, config, URDF</description>
  <maintainer email="covapsy@team.com">COVAPSY Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>covapsy_bridge</exec_depend>
  <exec_depend>covapsy_perception</exec_depend>
  <exec_depend>covapsy_nav</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
